# TEC-Media-File-System

./: CMakeLists.txt  README.md  main.cpp
DiskNodes/Disk0/: prueba1.txt  text.txt
DiskNodes/Disk1/: video1.txt
DiskNodes/Disk2/: prueba1.txt
DiskNodes/Disk3/: video1.txt
RAID 5/: DiskNode.cpp  DiskNode.h  TECMFS_Disk.cpp  TECMFS_Disk.h  main.cpp
RAID 5/Estructuras/: ListaDoble.h
lib/include/rapidjson/: document.h
src/ControllerNode/: ControllerServer.cpp  ControllerServer.h  JSONHandler.cpp  JSONHandler.h  RequestManager.cpp  RequestManager.h
src/RAID 5/: DiskNode.cpp  DiskNode.h  Raid5Handler.cpp  Raid5Handler.h  TECMFS_Disk.cpp  TECMFS_Disk.h
